# waydock

./: .editorconfig  .gitignore  .uncrustify.cfg  README.md  gdb.output  meson.build  meson_options.txt
.github/workflows/: fedora-build.yml  linting.yml
build-scripts/: waydock-git.rpkg.spec  waydock.rpkg.spec
data/: meson.build  org.erikreider.waydock.gschema.xml  waydock.gresource.xml
data/style/: style.scss
protocols/: meson.build  wlr-foreign-toplevel-management-unstable-v1.vapi
services/systemd/: waydock.service.in
src/: constants.vala.in  dock_item.vala  dock_list.vala  dock_popover.vala  functions.vala  icon.vala  icon_padding.vala  icon_state.vala  icon_state_list_store.vala  icon_tooltip.vala  main.vala  meson.build  pinned_list.vala  sorted_liststore.vala  unity_service.vala  window.vala  wlr_foreign_helper.vala
